--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ dependencies: []
 galaxy_info:
   role_name: slapd
   author: ktooi
-  description: Configure slapd for RHEL/CentOS and Debian/Ubuntu.
+  description: Install and configure slapd for RHEL/CentOS and Debian/Ubuntu. Optionally, major modules and schemas can be imported and replication can be configured.
   license: "license (MIT)"
   min_ansible_version: 2.0
   platforms:
