Add RHEL8, RHEL9 support.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
       fail-fast: false
       matrix:
         distro:
+          - rockylinux9
+          - rockylinux8
           - centos7
           - ubuntu2204
           - ubuntu2004
