Add 389-ds-base so that 389-ds can be installed.

--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,4 +1,10 @@
 ---
+- name: Ensure 389-ds-base was installed
+  become: true
+  dnf:
+    name: 389-ds-base
+    state: present
+
 - name: Enable DNF module
   become: true
   command:
