--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -37,6 +37,15 @@
   tags:
     - always
 
+- name: Define ldap_server_repo
+  set_fact:
+    ldap_server_repo: "{{ __ldap_server_repo }}"
+  when:
+    - ldap_server_repo is not defined
+    - __ldap_server_repo is defined
+  tags:
+    - always
+
 - name: Define ldap_python_modules
   set_fact:
     ldap_python_modules: "{{ __ldap_python_modules | list }}"
