--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -16,3 +16,16 @@
   pip:
     name: "{{ ldap_python_modules_pip }}"
   when: slapd_install_python_module_via_pip
+
+- name: Copy DB_CONFIG
+  become: true
+  template:
+    src: DB_CONFIG.j2
+    dest: "{{ ldap_server_db_config_file }}"
+
+- name: Start the slapd daemon.
+  become: true
+  systemd:
+    name: "{{ slapd_daemon }}"
+    enabled: true
+    state: started
