--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,17 +12,19 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
+        - 9
+        - 8
         - 7
-    #     - 8
-    # - name: Archlinux
-    #   versions:
-    #     - all
     - name: Ubuntu
       versions:
-        - all
+        - 'jammy'   # 22.04
+        - 'focal'   # 20.04
+        - 'bionic'  # 18.04
     - name: Debian
       versions:
-        - all
+        - 'bullseye'  # 11
+        - 'buster'    # 10
+        - 'stretch'   # 9
   galaxy_tags:
     - ldap
     - openldap
